--- a/index.html
+++ b/index.html
@@ -3,14 +3,20 @@
 
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./workintech.svg" />
+    <link href="/src/index.css" rel="stylesheet"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Workintech + 🍕</title>
+    <title></title>
   </head>
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+  <body style="background-image: url('images/iteration-1-images/home-banner.png')">
+    <section class="home-container">
+      <img src="images/iteration-1-images/logo.svg"/>
+      <p>
+        KOD ACIKTIRIR <br>
+        PIZZA DOYURUR
+      </p>
+      <button>ACIKTIM</button>
+    </section>
   </body>
 
 </html>
