routing hata duzeltildi
routing hatalari duzeltildi home sayfasi ortaya cikti

--- a/index.html
+++ b/index.html
@@ -8,15 +8,9 @@
     <title></title>
   </head>
 
-  <body style="background-image: url('images/iteration-1-images/home-banner.png')">
-    <section class="home-container">
-      <img src="images/iteration-1-images/logo.svg"/>
-      <p>
-        KOD ACIKTIRIR <br>
-        PIZZA DOYURUR
-      </p>
-      <button>ACIKTIM</button>
-    </section>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 
 </html>
